--- a/busca_app/templates/index.html
+++ b/busca_app/templates/index.html
@@ -14,7 +14,7 @@
     <header>
         <div class="main-content">
             {% if user.is_authenticated %}
-            <a class="brand" href="{% url 'home' %}">Hotel Capo Zorial</a>
+            <a class="brand" href="{% url 'home' %}"><img src="../static/img/logo_hotel.png" alt=""></a>
             {% else %}
             <a class="brand" href="{% url 'home' %}" style="padding-left: 40px;">RFN Advogados</a>
             {% endif %}
@@ -45,7 +45,7 @@
                 <a class="ajuda" href="#"><ion-icon name="help-circle-outline"></ion-icon>Ajuda</a>
             </li>
             <li>
-                <a class="sair" href="#"><ion-icon name="log-out-outline"></ion-icon>Sair</a>
+                <a class="sair" href="{% url 'sair' %}"><ion-icon name="log-out-outline"></ion-icon>Sair</a>
             </li>
         </ul>
     </div>
@@ -54,14 +54,14 @@
     <div class="navigation">
         <div class="menu-btn" onclick="toggleNavigation()">
             <span class="icon"><ion-icon name="menu"></ion-icon></span>
-            <span class="title">Hotel Capo Zorial</span>
+            <span class="title"><img src="../static/img/logo_hotel.png" alt="">Hotel Capo Zorial</span>
         </div>
 
         <ul>
             <li class="list" data-page="home">
                 <a href="{% url 'home' %}">
                     <span class="icon"><ion-icon name="home-outline"></ion-icon></span>
-                    <span class="title">Home</span>
+                    <span class="title">Avaliações</span>
                 </a>
             </li>
 
@@ -69,69 +69,21 @@
             {% if group.name == 'admin' %}
             
             <li class="list">
-                <a href="#" data-page="grupos">
+                <a href="{% url 'grupos' %}" data-page="grupos">
                     <span class="icon"><ion-icon name="people-outline"></ion-icon></span>
                     <span class="title">Grupos</span>
                 </a>
             </li>
             <li class="list">
-                <a href="#" data-page="usuarios">
+                <a href="{% url 'users' %}" data-page="usuarios">
                     <span class="icon"><ion-icon name="person-outline"></ion-icon></span>
                     <span class="title">Usuários</span>
                 </a>
             </li>
             <li class="list">
-                <a href="#" data-page="empresas">
-                    <span class="icon"><ion-icon name="business-outline"></ion-icon></span>
-                    <span class="title">Empresas</span>
-                </a>
-            </li>
-            <li class="list">
-                <a href="#" data-page="funcionarios">
-                    <span class="icon"><ion-icon name="id-card-outline"></ion-icon></span>
-                    <span class="title">Funcionários</span>
-                </a>
-            </li>
-            <li class="list">
-                <a href="#" data-page="projetos">
-                    <span class="icon"><ion-icon name="documents-outline"></ion-icon></span>
-                    <span class="title">Projetos</span>
-                </a>
-            </li>
-            <li class="list">
-                <a href="#" data-page="fases">
-                    <span class="icon"><ion-icon name="bookmarks-outline"></ion-icon></span>
-                    <span class="title">Fases</span>
-                </a>
-            </li>
-            <li class="list" data-page="atividades">
-                <a href="#">
-                    <span class="icon"><ion-icon name="calendar-outline"></ion-icon></span>
-                    <span class="title">Atividades</span>
-                </a>
-            </li>
-            <li class="list">
-                <a href="#" data-page="modelo_documentos">
-                    <span class="icon"><ion-icon name="folder-outline"></ion-icon></span>
-                    <span class="title">Documentos</span>
-                </a>
-            </li>
-            <li class="list">
-                <a href="#" data-page="questionarios">
-                    <span class="icon"><ion-icon name="file-tray-stacked-outline"></ion-icon></span>
-                    <span class="title">Questionários</span>
-                </a>
-            </li>
-            <li class="list">
-                <a href="#" data-page="perguntas">
-                    <span class="icon"><ion-icon name="help-circle-outline"></ion-icon></span>
-                    <span class="title">Perguntas</span>
-                </a>
-            </li>
-            <li class="list">
                 <a href="#" data-page="respostas_questionario">
-                    <span class="icon"><ion-icon name="chatbox-ellipses-outline"></ion-icon></span>
-                    <span class="title">Respostas de Questionários</span>
+                    <span class="icon"><ion-icon name="bar-chart-outline"></ion-icon></span>
+                    <span class="title">Gráficos</span>
                 </a>
             </li>
             <li class="list">
@@ -142,48 +94,11 @@
             </li>
             <li class="list">
                 <a href="#" data-page="historico">
-                    <span class="icon"><ion-icon name="time-outline"></ion-icon></span>
-                    <span class="title">Histórico</span>
+                    <span class="icon"><ion-icon name="document-text-outline"></ion-icon></span>
+                    <span class="title">Relatórios</span>
                 </a>
             </li>
-
-            {% elif group.name == 'dpo' %}
-            <li class="list">
-                <a href="#">
-                    <span class="icon"><ion-icon name="layers-outline"></ion-icon></span>
-                    <span class="title">Fases</span>
-                </a>
-            </li>
-            <li class="list">
-                <a href="#">
-                    <span class="icon"><ion-icon name="play-circle-outline"></ion-icon></span>
-                    <span class="title">Tutoriais</span>
-                </a>
-            <li class="list">
-                <a href="#">
-                    <span class="icon"><ion-icon name="people-outline"></ion-icon></span>
-                    <span class="title">Usuario</span>
-                </a>
-            </li>
-            <li class="list">
-                <a href="#">
-                    <span class="icon"><ion-icon name="settings-outline"></ion-icon></span>
-                    <span class="title">Configurações</span>
-                </a>
-            </li>
-            <li class="list">
-                <a href="#">
-                    <span class="icon"><ion-icon name="help-circle-outline"></ion-icon></span>
-                    <span class="title">Ajuda</span>
-                </a>
-            </li>
-
-            <li class="list">
-                <a href="#">
-                    <span class="icon"><ion-icon name="log-out-outline"></ion-icon></span>
-                    <span class="title">Sair</span>
-                </a>
-            </li>
+            
             {% else %}
             <div>
             </div>
