--- a/busca_app/templates/index.html
+++ b/busca_app/templates/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 
+{% load static %}
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,9 +16,9 @@
     <header>
         <div class="main-content">
             {% if user.is_authenticated %}
-            <a class="brand" href="{% url 'home' %}"><img src="../static/img/logo_hotel.png" alt=""></a>
+            <a class="brand" href="{% url 'home' %}"><img src="{% static 'img/logo_hotel.png' %}" alt=""></a>
             {% else %}
-            <a class="brand" href="{% url 'home' %}" style="padding-left: 40px;">RFN Advogados</a>
+            <a class="brand" href="{% url 'home' %}" style="padding-left: 40px;"><img src="{% static 'img/logo_hotel.png' %}"></a>
             {% endif %}
         </div>
         </div>
@@ -26,8 +28,8 @@
             <a class="profile-icon" href="#"><ion-icon name="person-circle-outline"></ion-icon></a>
             {% else %}
             <div class="logar">
-                <a href="#">Entrar</a>
-                <a href="#">Cadastrar</a>
+                <a href="{% url 'login' %}">Entrar</a>
+                <a href="{% url 'cadastrar' %}">Cadastrar</a>
             </div>
             {% endif %}
         </div>
@@ -119,7 +121,7 @@
     </div>
     <footer>
         <span class="copyright">Hotel Capo Zorial©, 2024. Todos os direitos reservados.</span>
-        <span class="version">Versão 0.1</span>
+        <span class="version">Versão 0.3</span>
     </footer>
     {% else %}
     <div class="block-content2">
