--- a/busca_app/static/css/login.css
+++ b/busca_app/static/css/login.css
@@ -7,7 +7,7 @@
 }
 
 body {
-    background-image: url('../images/login_bg.jpg');
+    background-image: url('../images/hotel.jpg');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
